--- a/style/main.css
+++ b/style/main.css
@@ -57,9 +57,34 @@ header nav a:hover {
 }
 
 .desenho-principal .descricao {
+    margin-top: 10px;
     margin-bottom: 40px;
+    font-size: 17px;
 }
 
-.titulo{
-    font-size: 40px;
+.desenho-principal .titulo{
+    margin-top: 15%;
+    font-size: 50px;
+    font-family:'Bangers';
+}
+
+.botao {
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+
+    padding: 15px 30px;
+    margin-right: 30px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+}
+
+.botao:hover {
+    background-color: white;
+    color: black;
+}
+div i {
+    margin-right: 10px;
 }
