--- a/style/main.css
+++ b/style/main.css
@@ -46,9 +46,9 @@ header nav a:hover {
 
 .desenho-principal {
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url("../img/coragem-1-1-800x262.jpg");
-    height: 400px;
-    background-size:cover;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50) 100%), url("../img/coragem-capa1.jpg");
+    height: 450px;
+    background-size: cover;
     
     display:flex;
     flex-direction:column;
@@ -87,4 +87,18 @@ header nav a:hover {
 }
 div i {
     margin-right: 10px;
+}
+
+.container {
+    margin-left: 15px;
+}
+
+.desenho-principal .container {
+    width: 60%;
+}
+
+.box-desenho {
+    height: 100%;
+    width: 100%;
+    display: block;
 }
