--- a/style/main.css
+++ b/style/main.css
@@ -95,9 +95,9 @@ div i {
     margin-left: 15px;
 }
 
-.desenho-principal .container {
-   /*width: 60%;*/
-}
+/*.desenho-principal .container {
+   width: 60%;
+}*/
 
 .box-desenho {
     height: 100%;
